[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Plataforma1.gd" type="Script" id=1]
[ext_resource path="res://img/plataforma.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 131.366, 10 )

[node name="Plataforma1" type="StaticBody2D"]
position = Vector2( 0, -4.36534 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Plataforma1" type="Sprite" parent="."]
position = Vector2( 240.466, 145.745 )
scale = Vector2( 0.772499, 0.808693 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 242.12, 146.92 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 242.12, 146.92 )
shape = SubResource( 1 )

[node name="Up" type="Timer" parent="."]
wait_time = 2.0

[node name="Down" type="Timer" parent="."]
wait_time = 2.0
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_Area2D_body_shape_entered"]
[connection signal="body_shape_exited" from="Area2D" to="." method="_on_Area2D_body_shape_exited"]
[connection signal="timeout" from="Up" to="." method="_on_Up_timeout"]
[connection signal="timeout" from="Down" to="." method="_on_Down_timeout"]
